--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -182,7 +182,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  border: 2px solid #dd2e2e;
+  border: 2px solid #264caf;
   border-radius: 10px;
   padding: 16px;
   margin: 16px 0;
