--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -163,7 +163,7 @@
 
 .red-font-b {
   font-weight: 700;
-  color: #dd2e2e;
+  color: #e94c4c;
 }
 
 .grey-font-b {
@@ -200,7 +200,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  border: 2px solid #dd2e2e;
+  border: 2px solid #e94c4c;
   border-radius: 10px;
   padding: 16px;
   margin: 16px 0;
