--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -153,7 +153,7 @@
 
 .blue-font-b {
   font-weight: 700;
-  color: #264caf;
+  color: #264caf; /* Blue-200 */
 }
 
 .red-font {
@@ -163,7 +163,7 @@
 
 .red-font-b {
   font-weight: 700;
-  color: #e94c4c;
+  color: #e94c4c; /* Red-200 */
 }
 
 .grey-font-b {
