--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -176,6 +176,26 @@
   color: #959396; /* Grey-000 */
 }
 
+// CUSTOM LIST
+
+ol.custom-ol {
+  list-style: none;
+  counter-reset: list-item calc(var(--start, 1) - 1) !important;
+  padding-left: 2em;
+}
+
+ol.custom-ol li {
+  counter-increment: list-item;
+  position: relative;
+  margin-bottom: 0.5em;
+}
+
+ol.custom-ol li::before {
+  content: counter(list-item) ". ";
+  position: absolute;
+  left: -2em;
+}
+
 // Icons
 
 .nic {
