--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,4 +1,4 @@
-// Slug
+// SLUG
 
 .slug {
     display: flex;
@@ -100,7 +100,7 @@
     }
 }
 
-// Blue Button
+// BLUE BUTTON
 
 .btn-blue2 {
   background-color: #183385; /* Blue-300 */
@@ -111,7 +111,7 @@
   color: #ffffff;
 }
 
-// Flexbox
+// FLEXBOX
 
 .custom-flexbox {
     display: flex;
@@ -144,7 +144,7 @@
     }
 }
 
-// Font
+// FONT
 
 .blue-font {
   font-weight: 500;
@@ -191,12 +191,12 @@ ol.custom-ol li {
 }
 
 ol.custom-ol li::before {
-  content: counter(list-item) ". ";
+  content: counter(list-item) "";
   position: absolute;
   left: -2em;
 }
 
-// Icons
+// ICONS
 
 .nic {
   display: inline-block;
