--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -198,7 +198,7 @@ ol.custom-ol li::before {
 
 // ICONS
 
-.nic {
+.nric-blue {
   display: inline-block;
   vertical-align: middle;
   background-color: #264caf;
@@ -207,7 +207,7 @@ ol.custom-ol li::before {
   margin-right: 4px;
 }
 
-.nic-red {
+.nric-red {
   display: inline-block;
   vertical-align: middle;
   background-color: #dd2e2e;
