--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -198,6 +198,15 @@ ol.custom-ol li::before {
 
 // ICONS
 
+.nric-blue-sml {
+  display: inline-block;
+  vertical-align: middle;
+  background-color: #264caf;
+  width: 16px;
+  height: 16px;
+  margin-right: 2px;
+}
+
 .nric-blue {
   display: inline-block;
   vertical-align: middle;
