--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -156,6 +156,11 @@
   color: #264caf; /* Blue-200 */
 }
 
+.blue-font-d {
+  font-weight: 500;
+  color: #183385; /* Blue-300 */
+}
+
 .red-font {
   font-weight: 500;
   color: #e94c4c;
