--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -1,4 +1,4 @@
 <center>
-<p class="text-small text-grey-dk-100 mb-0">Netrunner is a trademark of R. Talsorian Games, Inc., licensed by Wizards of the Coast LLC. Android is a trademark and © Fantasy Flight Games. All rights reserved. © Wizards.
+<p class="text-small text-grey-dk-100 mb-0">Netrunner is a TM of R. Talsorian Games, Inc. Android is a TM & © Fantasy Flight Games. All rights reserved. Netrunner is licensed by Wizards of the Coast LLC. © Wizards.
 </p>
 </center>
