--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -357,7 +357,7 @@ ol.custom-ol li::before {
 
 .link {
   -webkit-mask-image: url('https://raw.githubusercontent.com/NetrunnerCodex/NetrunnerIconCache/main/actions/link_NRIC-OG.svg');
-  mask-image: url('https://raw.githubusercontent.com/NetrunnerCodex/NetrunnerIconCache/main/actions/link_NRIC-OG');
+  mask-image: url('https://raw.githubusercontent.com/NetrunnerCodex/NetrunnerIconCache/main/actions/link_NRIC-OG.svg');
   -webkit-mask-size: contain;
   mask-size: contain;
   -webkit-mask-repeat: no-repeat;
