--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -99,6 +99,31 @@
     }
 }
 
+.clr-image-container {
+    flex-shrink: 0;
+    width: 290px;
+    height: 160px; 
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    background-image: url('{{ page.slug_image | relative_url }}');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+}
+
+.clr-image-container img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    opacity: 0.85;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 // 0002
 
 .btn-blue2 {
