--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -115,6 +115,10 @@
 .slug-left {
     flex: 1;
     color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 15px;
 }
 
 .slug-right {
@@ -122,18 +126,16 @@
     width: 290px;
     height: 160px;
     overflow: hidden;
-    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .slug-right img {
-    display: block;
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: contain;
     opacity: 0.85;
-    position: absolute;
-    top: 0;
-    left: 0;
 }
 
 // 0002
