--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -261,6 +261,13 @@ ol.custom-ol li::before {
 
 // 0006
 
+.sml-table {
+  width: 300px;
+  margin: 0 auto;
+}
+
+// 0007
+
 .nric-blue-sml {
   display: inline-block;
   vertical-align: middle;
