--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -263,7 +263,8 @@ ol.custom-ol li::before {
 
 .table-wrapper {
   width: 300px;
-  margin: 0 auto;
+  margin-top: 0;
+  padding-top: 0;
 }
 
 table.sml-table {
