--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -263,12 +263,16 @@ ol.custom-ol li::before {
 
 .table-wrapper {
   width: 300px;
-  margin-top: 0;
-  padding-top: 0;
+  margin-top: 0 !important;
+  padding-top: 0 !important;
 }
 
 table.sml-table {
-  width: 100%;
+  width: 300px !important;
+  margin: 0 auto !important;
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+  display: block;
 }
 
 // 0007
