--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -265,6 +265,8 @@ ol.custom-ol li::before {
   width: 300px;
   margin-top: 0 !important;
   padding-top: 0 !important;
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;  
 }
 
 table.sml-table {
