--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -279,7 +279,7 @@ table.sml-table {
   width: 50px;
 }
 
-.sml-table-wide {
+table.sml-table-wide {
   width: auto !important;
   table-layout: fixed;
   margin: 0 auto !important;
