--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -281,7 +281,7 @@ table.sml-table {
 
 table.sml-table-wide {
   width: auto !important;
-  table-layout: auto; !important;
+  table-layout: auto !important;
   margin: 0 auto !important;
 }
 
