--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -279,6 +279,14 @@ table.sml-table {
   width: 50px;
 }
 
+.table-wrap-wide {
+  width: 600px;
+  margin-top: 0 !important;
+  padding-top: 0 !important;
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;  
+}
+
 table.sml-table-wide {
   width: 600px !important;
   table-layout: fixed;
