--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -280,8 +280,8 @@ table.sml-table {
 }
 
 .table-wrap-wide {
-  width: 100%;
-  max-width: 600px;
+  width: 100% !important;
+  max-width: 600px !important;
   margin-top: 0 !important;
   padding-top: 0 !important;
   margin-bottom: 0 !important;
