--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -261,9 +261,8 @@ ol.custom-ol li::before {
 
 // 0006
 
-.table-wrapper table {
+.table-wrapper {
   width: 300px;
-  table-layout: fixed;  
   margin-top: 0 !important;
   padding-top: 0 !important;
   margin-bottom: 0 !important;
