--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -261,41 +261,46 @@ ol.custom-ol li::before {
 
 // 0006
 
+/* Narrow Table Styles */
 .table-wrapper {
   width: 300px;
-  margin-top: 0 !important;
-  padding-top: 0 !important;
-  margin-bottom: 0 !important;
-  padding-bottom: 0 !important;  
+  margin: 0 auto !important;
+  padding: 0 !important;
 }
 
-table.sml-table {
+.table-wrapper table.sml-table {
   width: 200px !important;
-  table-layout: fixed;
+  table-layout: fixed !important;
   margin: 0 auto !important;
+  border-collapse: collapse; /* Remove default spacing */
+  border: none;              /* Remove unwanted borders */
 }
 
-.sml-table td:first-child {
-  width: 50px;
+.table-wrapper table.sml-table td:first-child {
+  width: 50px !important;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
-.table-wrap-wide table {
- width: 600px;
- table-layout: fixed;   
- margin-top: 0 !important;
- padding-top: 0 !important;
- margin-bottom: 0 !important;
- padding-bottom: 0 !important;   
+/* Wide Table Styles */
+.table-wrap-wide {
+  width: 600px;
+  margin: 0 auto !important;
+  padding: 0 !important;
 }
 
-table.sml-table-wide {
+.table-wrap-wide table.sml-table-wide {
   width: 500px !important;
-  table-layout: fixed;
+  table-layout: fixed !important;
   margin: 0 auto !important;
+  border-collapse: collapse; /* Remove default spacing */
+  border: none;              /* Remove unwanted borders */
 }
 
-.sml-table-wide td:first-child {
-  width: 50px;
+.table-wrap-wide table.sml-table-wide td:first-child {
+  width: 50px !important;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 // 0007
