--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -261,49 +261,22 @@ ol.custom-ol li::before {
 
 // 0006
 
-/* Narrow table styling */
 .table-wrapper {
-  width: 300px !important;
-  margin: 0 !important;
-  padding: 0 !important;
-}
-.table-wrapper table.sml-table {
-  width: 200px !important;
-  table-layout: fixed !important;
-  margin: 0 !important;
-  border-collapse: collapse;
-}
-.table-wrapper table.sml-table td:first-child {
-  width: 50px !important;
-  overflow: hidden;
-  white-space: nowrap;
+  width: 100%;
+  margin-top: 0 !important;
+  padding-top: 0 !important;
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;  
 }
 
-/* Wide table styling */
-.table-wrap-wide {
-  width: 600px !important;
-  margin: 0 !important;
-  padding: 0 !important;
-  overflow-x: visible !important;
-}
-.table-wrap-wide table.sml-table-wide {
-  width: 500px !important;
-  table-layout: fixed !important;
-  margin: 0 !important;
-  border-collapse: collapse;
-}
-.table-wrap-wide table.sml-table-wide td:first-child {
-  width: 50px !important;
-  overflow: hidden;
-  white-space: nowrap;
+table.sml-table {
+  width: 100%; !important;
+  table-layout: fixed;
+  margin: 0 auto !important;
 }
 
-/* Apply box-sizing to avoid unexpected overflow */
-.table-wrap-wide,
-.table-wrap-wide table,
-.table-wrap-wide table td,
-.table-wrap-wide table th {
-  box-sizing: border-box;
+.sml-table td:first-child {
+  width: 50px;
 }
 
 // 0007
