--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -270,7 +270,7 @@ ol.custom-ol li::before {
 }
 
 table.sml-table {
-  width: 100%; !important;
+  width: 100% !important;
   table-layout: fixed;
   margin: 0 auto !important;
 }
