--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,3 +1,3 @@
-<a href="{{ include.base_url | default: 'https://nrdb.reteki.fun/en/card' }}/{{ include.num }}" target="_blank" rel="noopener noreferrer">
-  {{ include.name | default: include.num }}
+<a href="{{ include.base_url | default: 'https://nrdb.reteki.fun/en/card' }}/{{ include.id }}" target="_blank" rel="noopener noreferrer">
+  {{ include.nm | default: include.id }}
 </a>
